--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
-title: Home
-layout: home
+title: Home 2
+layout: home 2
 ---
 <p>This is the basic starting point for your site homepage. The web convention is to 
     name the homepage file (and the "home" of any subdirectory) <code>index.html</code>.</p>
