--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 ---
-title: Home 2
+title: Hiya!
 layout: home 
 ---
-<p>This is the basic starting point for your site homepage. The web convention is to 
-    name the homepage file (and the "home" of any subdirectory) <code>index.html</code>.</p>
+<div style="background-color:lavendar;">
+<h3>Welcome to The Garden Project</h3>
+<p><strong>The Garden Project</strong> is a simple website created by Darlene Sepulveda. The main goal was to showcase 
+    <em>beautiful personally designed flower artworks</em> on shirts for sale. 
+    While the aspect of viewing through the gallery and shopping for shirts are unavailable at the moment, 
+    feel free to just blankly stare at this webpage. 
+</p>
+<button><center>explore</center></button>
+</div>
