color changing div

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 title: Hiya!
 layout: home 
 ---
-<div style="background-color:lavendar;">
+<div style="background-color:#dca9eb;">
 <h3>Welcome to The Garden Project</h3>
 <p><strong>The Garden Project</strong> is a simple website created by Darlene Sepulveda. The main goal was to showcase 
     <em>beautiful personally designed flower artworks</em> on shirts for sale. 
