--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@ title: Hiya!
 layout: home 
 ---
 <style>
-    Welcome{
+    .welcome {
     background-color:#dca9eb;
-    margin: 20pt;
+    padding: 20px;
     }
 </style>
-<div class="Welcome">
+<div class="welcome">
 <h3>Welcome to The Garden Project</h3>
 <p><strong>The Garden Project</strong> is a simple website created by Darlene Sepulveda. The main goal was to showcase 
     <em>beautiful personally designed flower artworks</em> on shirts for sale. 
