optimizing color varients

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@ layout: home
     background-color:#dca9eb;
     padding: 20px;
     }
+    .welcome-text{
+        font-color: white;
+    }
 </style>
 <div class="welcome">
-<h3>Welcome to The Garden Project</h3>
-<p><strong>The Garden Project</strong> is a simple website created by Darlene Sepulveda. The main goal was to showcase 
+<h2 class="welcome-text">Welcome to The Garden Project</h2>
+<p class="welcome-text"><strong>The Garden Project</strong> is a simple website created by Darlene Sepulveda. The main goal was to showcase 
     <em>beautiful personally designed flower artworks</em> on shirts for sale. 
     While the aspect of viewing through the gallery and shopping for shirts are unavailable at the moment, 
     feel free to just blankly stare at this webpage. 
