--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: home
     padding: 20px;
     }
     .welcome-text{
-        font-color: white;
+        color: white;
     }
 </style>
 <div class="welcome">
