change in text placement

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: home
 ---
 <style>
     .welcome {
-    background-color:#dca9eb;
+    background-color:#e6c5f0;
     padding: 20px;
     }
     .welcome-text{
@@ -14,9 +14,9 @@ layout: home
 <div class="welcome">
 <h2 class="welcome-text">Welcome to The Garden Project</h2>
 <p class="welcome-text"><strong>The Garden Project</strong> is a simple website created by Darlene Sepulveda. The main goal was to showcase 
-    <em>beautiful personally designed flower artworks</em> on shirts for sale. 
-    While the aspect of viewing through the gallery and shopping for shirts are unavailable at the moment, 
-    feel free to just blankly stare at this webpage. 
+    <em>beautiful personally designed flower artworks</em> on shirts for sale.  
 </p>
 <button><center>explore</center></button>
 </div>
+<center>While the aspect of viewing through the gallery and shopping for shirts are unavailable at the moment, 
+    feel free to just blankly stare at this webpage.</center>
