updated home page design

--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@ title: Hiya!
 layout: home 
 ---
 <style>
-    .welcome {
+    .welc {
     background-color:#e6c5f0;
     padding: 20px;
+    padding-bottom: 10px;
     }
-    .welcome-text{
+    .welc-text{
         color: white;
     }
+    .exp{
+        align-items: center;
+    }
 </style>
-<div class="welcome">
-<h2 class="welcome-text">Welcome to The Garden Project</h2>
-<p class="welcome-text"><strong>The Garden Project</strong> is a simple website created by Darlene Sepulveda. The main goal was to showcase 
+<div class="welc">
+<h2 class="welc-text">Welcome to The Garden Project</h2>
+<p class="welc-text"><strong>The Garden Project</strong> is a simple website created by Darlene Sepulveda. The main goal was to showcase 
     <em>beautiful personally designed flower artworks</em> on shirts for sale.  
 </p>
-<button><center>explore</center></button>
+<button class="exp">Explore</button>
 </div>
 <center>While the aspect of viewing through the gallery and shopping for shirts are unavailable at the moment, 
     feel free to just blankly stare at this webpage.</center>
