--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@ layout: home
         color: white;
     }
     .exp{
-        align-items: center;
+        text-align: center;
     }
+    .sub{
+        padding:10px;
+    }
+
 </style>
 <div class="welc">
 <h2 class="welc-text">Welcome to The Garden Project</h2>
@@ -22,5 +26,5 @@ layout: home
 </p>
 <button class="exp">Explore</button>
 </div>
-<center>While the aspect of viewing through the gallery and shopping for shirts are unavailable at the moment, 
-    feel free to just blankly stare at this webpage.</center>
+<p class="sub"><center>While the aspect of viewing through the gallery and shopping for shirts are unavailable at the moment, 
+    feel free to just blankly stare at this webpage.</center></p>
