--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ layout: home
         color: white;
     }
     .exp{
-        text-align: center;
+        margin: auto;
+        background-color: #e4f0b6;
+        padding: 5px;
     }
     .sub{
         padding:10px;
