--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@ layout: home
         margin: auto;
         background-color: #e4f0b6;
         padding: 5px;
+        border: none;
+    }
+    .exp:hover{
+        background-color:#e9f0cc;
     }
     .sub{
         padding:10px;
