button fixing again please please look pretty now

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@ layout: home
         color: white;
     }
     .exp{
+        display: block;
         margin: auto;
         background-color: #e4f0b6;
-        padding: 5px;
+        padding: 10px;
         border: none;
     }
     .exp:hover{
