hasty fixes, button and about page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ layout: home
         background-color: #e4f0b6;
         padding: 10px;
         border: none;
+        color: white;
     }
     .exp:hover{
         background-color:#e9f0cc;
