--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@ layout: home
         display: block;
         margin: auto;
         background-color: #e4f0b6;
-        padding: 10px;
+        padding: 30px;
         border: none;
         color: white;
+        font-size: 20px;
     }
     .exp:hover{
         background-color:#e9f0cc;
