--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@ layout: home
         margin: auto;
         background-color: #e4f0b6;
         padding: 30px;
+        padding-top: 20px;
+        padding-bottom: 20px;
         border: none;
         color: white;
         font-size: 20px;
