--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@ layout: home
         padding-bottom: 10px;
         border: none;
         color: white;
-        font-size: 20px;
+        font-size: 16px;
     }
     .exp:hover{
-        background-color:#e9f0cc;
+        background-color:#ede5b9;
     }
     .sub{
         padding:10px;
