--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ layout: home
     }
     .welc-text{
         color: white;
+        padding-bottom: 5px;
     }
     .exp{
         display: block;
