tad button adjustments

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: home
     .exp{
         display: block;
         margin: auto;
-        background-color: #e4f0b6;
+        background-color: #f0e7ad;
         padding: 30px;
         padding-top: 10px;
         padding-bottom: 10px;
