trying a darker color for the button hover to see if it makes more sense?

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: home
         font-size: 16px;
     }
     .exp:hover{
-        background-color:#f0e7ad;
+        background-color:#c9c291;
     }
     .sub{
         padding:10px;
