button hover color change

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: home
         font-size: 16px;
     }
     .exp:hover{
-        background-color:#c9c291;
+        background-color:#e6dda5;
     }
     .sub{
         padding:10px;
