--- a/_designs/daffodils.html
+++ b/_designs/daffodils.html
@@ -1,7 +1,7 @@
 ---
-title: Lavender
+title: Daffodils
 product_image: imageplaceholder.jpeg
-product_name: Lavender
+product_name: Daffodils
 img_alt: drawing of (flower)
 ---
 {% include shop-item.html %}
