--- a/_designs/mushrooms.html
+++ b/_designs/mushrooms.html
@@ -1,7 +1,7 @@
 ---
-title: Lavender
+title: Mushrooms
 product_image: imageplaceholder.jpeg
-product_name: Lavender
+product_name: Mushrooms
 img_alt: drawing of (flower)
 ---
 {% include shop-item.html %}
