--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: home
     .recents{
         border: 1px;
         border-color: grey;
-        display: inline;
+        display: inline-block;
     }
 
 </style>
