testing css with loop

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@ layout: home
     .recents{
         border: 1px;
         border-color: grey;
-        display: inline-block;
+        overflow: hidden;
+        white-space: nowrap;
     }
 
 </style>
