changing background image

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 ---
-title: Hello!
+title: Hello friend!❤️
 layout: home 
 ---
 <style>
     .welc {
-    background-color:#e6c5f0;
+    background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/pastelPlantPattern.jpg);
     padding: 20px;
     padding-bottom: 40px;
     }
     .welc-text{
-        color: white;
+        color: grey;
         padding-bottom: 5px;
     }
     .exp{
