changing font color in welc text

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: home
     padding-bottom: 40px;
     }
     .welc-text{
-        color: grey;
+        color: rgb(70, 70, 70);
         padding-bottom: 5px;
     }
     .exp{
