pulling in some stats

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@ layout: home
     background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/pastelPlantPattern.jpg);
     padding: 20px;
     padding-bottom: 40px;
+    width:2000px;
+    height:300px;
     }
     .welc-text{
         color: rgb(70, 70, 70);
