--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: home
 ---
 <style>
     .welc {
-    background-image: url(https://github.com/DarleneSepulveda/lis786-GardenProject/blob/main/assets/decor.png); 
+    background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/decor.png); 
     padding: 20px;
     padding-bottom: 40px;
     }
