hiding background image for short time to measure size

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ layout: home
 ---
 <style>
     .welc {
-    background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/decor.png); 
+    /*background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/decor.png);*/
+    background-color: aqua;
     padding: 20px;
     padding-bottom: 40px;
     }
