--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: home
 ---
 <style>
     .welc {
-    /*background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/decor.png);*/
-    background-color: aqua;
+    background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/decor.png);
+    /*background-color: aqua;*/
     padding: 20px;
     padding-bottom: 40px;
     }
