--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@ layout: home
 <style>
     .welc {
     background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/decor.png);
-    /*background-color: aqua;*/
     padding: 20px;
     padding-bottom: 40px;
     }
     .welc-text{
-        color: rgb(70, 70, 70);
+        color: black;
         padding-bottom: 5px;
     }
     .exp{
