--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ layout: home
 <style>
     .welc {
     background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/decor.png);
-    padding: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
     padding-bottom: 40px;
     }
     .welc-text{
