changing directions to see if it worksss

--- a/_designs/daffodils.html
+++ b/_designs/daffodils.html
@@ -1,6 +1,6 @@
 ---
 title: Daffodils
-product_image: imageplaceholder.jpeg
+product_image: /assets/daff.png
 product_name: Daffodils
 img_alt: drawing of (flower)
 ---
