--- a/_designs/lavenders.html
+++ b/_designs/lavenders.html
@@ -1,6 +1,6 @@
 ---
 title: Lavender
-product_image: imageplaceholder.jpeg
+product_image: /assets/lav.png
 product_name: Lavender
 img_alt: drawing of (flower)
 ---
