--- a/_designs/mushrooms.html
+++ b/_designs/mushrooms.html
@@ -1,6 +1,6 @@
 ---
 title: Mushrooms
-product_image: imageplaceholder.jpeg
+product_image: /assets/mush.png
 product_name: Mushrooms
 img_alt: drawing of (flower)
 ---
