--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ layout: home
     padding-left: 10px;
     padding-right: 10px;
     padding-bottom: 40px;
+    padding-top:0px;
+    margin-top: 0px;
     }
     .welc-text{
         color: black;
