--- a/_designs/daffodils.html
+++ b/_designs/daffodils.html
@@ -1,6 +1,6 @@
 ---
 title: Daffodils
-product_image: /assets/daff.png
+product_image: https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/daff.png
 product_name: Daffodils
 img_alt: drawing of (flower)
 ---
