--- a/_designs/lavenders.html
+++ b/_designs/lavenders.html
@@ -1,6 +1,6 @@
 ---
 title: Lavender
-product_image: /assets/lav.png
+product_image: https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/lav.png
 product_name: Lavender
 img_alt: drawing of (flower)
 ---
