--- a/_designs/mushrooms.html
+++ b/_designs/mushrooms.html
@@ -1,6 +1,6 @@
 ---
 title: Mushrooms
-product_image: /assets/mush.png
+product_image: https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/mush.png
 product_name: Mushrooms
 img_alt: drawing of (flower)
 ---
