--- a/index.html
+++ b/index.html
@@ -48,5 +48,5 @@ layout: home
 <h3>Recent Designs</h3>
 {% for design in site.designs %}
         <h4>{{ design.title }}</h4>
-        <p><img src="{{design.image}}" alt="{{design.alt}}"> </p>
+        <p><img src="{{design.product_image}}" alt="{{design.img_alt}}"> </p>
 {% endfor %}
