--- a/_designs/daffodils.html
+++ b/_designs/daffodils.html
@@ -2,6 +2,6 @@
 title: Daffodils
 product_image: https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/daff.png
 product_name: Daffodils
-img_alt: drawing of (flower)
+img_alt: drawing of daffodil
 ---
 {% include shop-item.html %}
