--- a/_designs/lavenders.html
+++ b/_designs/lavenders.html
@@ -2,6 +2,6 @@
 title: Lavender
 product_image: https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/lav.png
 product_name: Lavender
-img_alt: drawing of (flower)
+img_alt: drawing of lavender
 ---
 {% include shop-item.html %}
