--- a/_designs/mushrooms.html
+++ b/_designs/mushrooms.html
@@ -2,6 +2,6 @@
 title: Mushrooms
 product_image: https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/mush.png
 product_name: Mushrooms
-img_alt: drawing of (flower)
+img_alt: drawing of mushroom
 ---
 {% include shop-item.html %}
