making explore button finally work

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@ layout: home
 <p class="welc-text"><strong>The Garden Project</strong> is a simple website created by Darlene Sepulveda. The main goal was to showcase 
     <em>beautiful personally designed flower artworks</em> on shirts for sale.  
 </p>
-<button onclick= 'location.href='shop.md' class="exp">Explore</button>
+<a href="https://darlenesepulveda.github.io/lis786-GardenProject/shop">
+<button class="exp">Explore</button>
+</a>
 </div>
 <p class="sub"><center>While the aspect of viewing through the gallery and shopping for shirts are unavailable at the moment, 
     feel free to just blankly stare at this webpage.</center></p>
