--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ layout: home
         border: none;
         color: white;
         font-size: 16px;
+        text-decoration: none;
     }
     .exp:hover{
         background-color:#e6dda5;
