--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 ---
-title:
+title: Hellow Friend🌿
 layout: home 
 ---
 <style>
+    .title{
+        font-size: 12px;
+        text-align: center;
+    }
     .welc {
     background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/decor.png);
     padding-left: 10px;
