--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ title: Hellow Friend🌿
 layout: home 
 ---
 <style>
-    .title{
+    title{
         font-size: 12px;
         text-align: center;
     }
