--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@ layout: home
     background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/decor.png);
     padding-left: 20px;
     padding-right: 20px;
-    padding-bottom: 30px;
+    padding-bottom: 20px;
     padding-top: 20px;
-    margin-top: 0px;
+    height: 200px;
     }
     .welc-text{
         color: black;
