changing some things

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: home
 <div class="welc">
 <h2 class="welc-text">Welcome to The Garden Project</h2>
 <p class="welc-text"><strong>The Garden Project</strong> is a simple website created by Darlene Sepulveda. The main goal was to showcase 
-    <em>beautiful personally designed flower artworks</em> on shirts for sale.  
+    beautiful personally designed flower artworks on shirts for sale.  
 </p>
 <a class="links" href="https://darlenesepulveda.github.io/lis786-GardenProject/shop">
 <button class="exp">Explore</button>
