--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: home
 <p class="welc-text"><strong>The Garden Project</strong> is a simple website created by Darlene Sepulveda. The main goal was to showcase 
     beautiful personally designed flower artworks on shirts for sale.  
 </p>
-<a class="links" href="https://darlenesepulveda.github.io/lis786-GardenProject/shop">
+<a href="https://darlenesepulveda.github.io/lis786-GardenProject/shop">
 <button class="exp">Explore</button>
 </a>
 </div>
