trying to even stuff out?

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@ layout: home
     background-image: url(https://raw.githubusercontent.com/DarleneSepulveda/lis786-GardenProject/main/assets/decor.png);
     padding-left: 20px;
     padding-right: 20px;
+    margin-right: 20px;
     padding-bottom: 20px;
     padding-top: 20px;
-    height: 200px;
+    height: 170px;
     }
     .welc-text{
         color: black;
