trying to keep margins short on button so that clicking doesn't spawn so quick

--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@ layout: home
         color: black;
         padding-bottom: 5px;
     }
+    a{
+        margin: 10px;
+    }
     .exp{
         display: block;
-        margin: auto;
+        margin: 5px;
         background-color:#ede5b9;
         padding-top: 10px;
         padding-bottom: 10px;
