--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@ layout: home
         padding-bottom: 5px;
     }
     a{
-        margin: 10px;
+        text-align: center;
     }
     .exp{
         display: block;
-        margin: 5px;
+        text-align: center;
         background-color:#ede5b9;
         padding-top: 10px;
         padding-bottom: 10px;
