fixing the sub text on home

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ layout: home
 <button class="exp">Explore</button>
 </a>
 </div>
-<p class="sub"><center>While the aspect of viewing through the gallery and shopping for shirts are unavailable at the moment, 
-    feel free to just blankly stare at this webpage.</center></p>
+<p class="sub"><center>While the aspect of shopping for shirts is unavailable at the moment, 
+    feel free to look through our gallery of selections.</center></p>
 
 <h3>Recent Designs</h3>
 {% for design in site.designs %}
