so now im trying to make a div thang

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: home
     }
     .exp{
         display: block;
-        text-align: center;
+        margin-bottom: ;
         background-color:#ede5b9;
         border: none;
         color: white;
@@ -36,13 +36,15 @@ layout: home
 
 </style>
 <div class="welc">
-<h2 class="welc-text">Welcome to The Garden Project</h2>
-<p class="welc-text"><strong>The Garden Project</strong> is a simple website created by Darlene Sepulveda. The main goal was to showcase 
-    beautiful personally designed flower artworks on shirts for sale.  
-</p>
-<a href="https://darlenesepulveda.github.io/lis786-GardenProject/shop" style="text-decoration:none">
-<button class="exp">Explore</button>
-</a>
+    <h2 class="welc-text">Welcome to The Garden Project</h2>
+    <p class="welc-text"><strong>The Garden Project</strong> is a simple website created by Darlene Sepulveda. The main goal was to showcase 
+        beautiful personally designed flower artworks on shirts for sale.  
+    </p>
+    <div class="exp">
+        <a href="https://darlenesepulveda.github.io/lis786-GardenProject/shop" style="text-decoration:none">
+            <button>Explore</button>
+        </a>
+    </div>
 </div>
 <p class="sub"><center>While the aspect of shopping for shirts is unavailable at the moment, 
     feel free to look through our gallery of selections.</center></p>
