trying to organize things

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@ layout: home
     a{
         text-align: center;
     }
+    .button{
+        width: 50px;
+        height: 20px;
+    }
     .exp{
         display: block;
         margin-bottom: ;
@@ -40,9 +44,9 @@ layout: home
     <p class="welc-text"><strong>The Garden Project</strong> is a simple website created by Darlene Sepulveda. The main goal was to showcase 
         beautiful personally designed flower artworks on shirts for sale.  
     </p>
-    <div class="exp">
+    <div class="button">
         <a href="https://darlenesepulveda.github.io/lis786-GardenProject/shop" style="text-decoration:none">
-            <button>Explore</button>
+            <button class="exp">Explore</button>
         </a>
     </div>
 </div>
